--- a/views/header.ejs
+++ b/views/header.ejs
@@ -36,4 +36,4 @@
     <% } %>
   </nav>
 
-  <div style="padding-left: 20px; padding-right: 20px; max-width: 800px; margin-left: auto; margin-right: auto">
+  <div style="padding-left: 20px; padding-right: 20px; max-width: 800px; margin-left: auto; margin-right: auto; margin-bottom: 100px;">
