--- a/views/viewhistory.ejs
+++ b/views/viewhistory.ejs
@@ -5,7 +5,7 @@
     <hr />
     <div ng-repeat="entry in history" style="margin-bottom: 10px">
       <img class="columns large-columns-1" src="{{entry.audit.by.avatar}}" style="margin-right: 10px; width: 50px; height: 50px; padding: 3px; border: solid 1px silver;" /> {{entry.audit.by.username}}<br/>
-      <div>{{entry | audittype}}</div>
+      <div>{{entry | audittype}} - {{entry.audit.date || ""}}</div>
       <div>{{entry | detailstring}}</div>
       <hr />
     </div>
@@ -48,10 +48,9 @@
     app.controller("AppCtrl", function($scope, $http) {
         var getAll = function(id) {
           $http.get("/history").success(function(data) {
-            $scope.history = data;
+            $scope.history = _.sortBy(data, function(e) { return e.audit.date || "Z"; });
           });
         };
-
 
         getAll();
     });
