restricting based on twitter master account

--- a/views/managecities.ejs
+++ b/views/managecities.ejs
@@ -2,15 +2,17 @@
   <div ng-app="App" ng-controller="AppCtrl">
     <h1>Manage Cities</h1>
     <hr />
-    <div class="row">
-      <div class="columns large-4"><input type="text" placeholder="city" ng-model="city"></div>
-      <div class="columns large-4"><input type="text" placeholder="state" ng-model="state"></div>
-      <div class="columns large-4"><input type="text" placeholder="country" ng-model="country"></div>
-    </div>
-    <div class="row" style="padding-left: 15px; padding-right: 15px;">
-      <a href="#" class="button small large-12 columns" ng-click="addCity()">add city</a>
-    </div>
-    <hr />
+    <% if(isMasterAccount) { %>
+      <div class="row">
+        <div class="columns large-4"><input type="text" placeholder="city" ng-model="city"></div>
+        <div class="columns large-4"><input type="text" placeholder="state" ng-model="state"></div>
+        <div class="columns large-4"><input type="text" placeholder="country" ng-model="country"></div>
+      </div>
+      <div class="row" style="padding-left: 15px; padding-right: 15px;">
+        <a href="#" class="button small large-12 columns" ng-click="addCity()">add city</a>
+      </div>
+      <hr />
+    <% } %>
     <div ng-repeat="city in cities" style="font-size: 25px">
       <a class="button small" style="float: right" href="/managelocations?id={{city.id}}">edit</a> 
       {{ city | citystring }}<br/>
