--- a/views/managelocations.ejs
+++ b/views/managelocations.ejs
@@ -2,18 +2,18 @@
   <div ng-app="App" ng-controller="AppCtrl">
     <h1>Manage Locations</h1>
     <hr />
-    <div class="row">
-      <div class="columns large-4"><input type="text" placeholder="city" ng-model="city"></div>
-      <div class="columns large-4"><input type="text" placeholder="state" ng-model="state"></div>
-      <div class="columns large-4"><input type="text" placeholder="country" ng-model="country"></div>
-    </div>
-    <div class="row" style="padding-left: 15px; padding-right: 15px;">
-      <a id="updateCity" href="#" class="button small large-12 columns" ng-click="updateCity()">update</a>
-    </div>
-    <hr />
+    <% if(isMasterAccount) { %>
+      <div class="row">
+        <div class="columns large-4"><input type="text" placeholder="city" ng-model="city"></div>
+        <div class="columns large-4"><input type="text" placeholder="state" ng-model="state"></div>
+        <div class="columns large-4"><input type="text" placeholder="country" ng-model="country"></div>
+      </div>
+      <div class="row" style="padding-left: 15px; padding-right: 15px;">
+        <a id="updateCity" href="#" class="button small large-12 columns" ng-click="updateCity()">update</a>
+      </div>
+      <hr />
+    <% } %>
     
-    <h2>Locations</h2>
-    <hr />
     <div class="row">
       <div class="columns large-12"><input type="text" placeholder="cowork name" ng-model="coworkName"></div>
     </div>
