--- a/views/managelocations.ejs
+++ b/views/managelocations.ejs
@@ -4,12 +4,13 @@
     <hr />
     <% if(isMasterAccount) { %>
       <div class="row">
-        <div class="columns large-4"><input type="text" placeholder="city" ng-model="city"></div>
-        <div class="columns large-4"><input type="text" placeholder="state" ng-model="state"></div>
-        <div class="columns large-4"><input type="text" placeholder="country" ng-model="country"></div>
+        <div class="columns large-6"><input type="text" placeholder="city" ng-model="city"></div>
+        <div class="columns large-6"><input type="text" placeholder="state" ng-model="state"></div>
+        <div class="columns large-6"><input type="text" placeholder="country" ng-model="country"></div>
+        <div class="columns large-6"><input type="text" placeholder="coordinator" ng-model="coordinator"></div>
       </div>
       <div class="row" style="padding-left: 15px; padding-right: 15px;">
-        <a id="updateCity" href="#" class="button small large-12 columns" ng-click="updateCity()">update</a>
+        <a id="updateCity" href="#" class="button small large-12 columns" ng-click="updateCity()">update city</a>
       </div>
       <hr />
     <% } %>
@@ -65,6 +66,7 @@
             $scope.city = data.city || "";
             $scope.state = data.state || "";
             $scope.country = data.country || "";
+            $scope.coordinator = data.coordinator || "";
           });
         };
 
@@ -80,6 +82,7 @@
             city: $scope.city,
             state: $scope.state,
             country: $scope.country,
+            coordinator: $scope.coordinator,
           };
 
           $("#updateCity").html("saving...");
