--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,46 +1,86 @@
 <% include header %>
   <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
-  <div class="row" ng-app="App" ng-controller="AppCtrl">
-    <h1>What is Coworking?</h1>
-    <hr/>
-    <p>
-      The idea is simple: independent professionals and those with workplace
-      flexibility work better together than they do alone. Coworking spaces are
-      about community-building and sustainability. Participants agree to uphold
-      the values set forth by the movement’s founders, as well as interact and share 
-      with one another. We are about creating better places to work and as a result,
-      a better way to work.
-    </p>
+  <div ng-app="App" ng-controller="AppCtrl">
+    <div class="row">
+      <h1>What is Coworking?</h1>
+      <hr/>
+      <p>
+        The idea is simple: independent professionals and those with workplace
+        flexibility work better together than they do alone. Coworking spaces are
+        about community-building and sustainability. Participants agree to uphold
+        the values set forth by the movement’s founders, as well as interact and share 
+        with one another. We are about creating better places to work and as a result,
+        a better way to work.
+      </p>
 
-    <p>If your cowork location isn't represented, reach out to any of our <a href="#coordinators">coordinators</a>, and they'll get the ball rolling.</p>
+      <p>If your cowork location isn't represented, reach out to any of our <a href="#coordinators">coordinators</a> via Twitter, and they'll get the ball rolling.</p>
+    </div>
 
-    <div class="columns" ng-repeat="city in all" style="margin-bottom: 25px; padding-top: 5px; padding-bottom: 5px; padding-left: 10px; border-left: solid 1px silver;">
-      <span style="font-size: 25px">{{city | citystring}}</span>
-      <a class="button small" ng-click="viewMap(city)" style="float: right; margin-bottom: 10px; padding: 10px" href="#">view map</a>
-      <hr style="margin: 0px" />
+    <div class="row">
+      <div class="columns">
+        <hr />
+        Cities |
+        <% u.each(cities, function(city) {  %>
+          <% if(city.state) { %>
+            <a href="#<%= city.id %>_anchor">
+              <%= city.city + ", " + (city.state || "(none)") + ", " + city.country %>
+            </a> | 
+          <% } else { %>
+            <a href="#<%= city.id %>_anchor">
+              <%= city.city + ", " + city.country %>
+            </a> | 
+          <% } %>
+        <% }); %>
+        <hr />
+      </div>
+    </div>
+    <br/>
+    <br/>
 
-      <div style="margin-bottom: 10px;" ng-repeat="loc in city.locations | orderBy:random">
-        <h4><a href="{{loc.url}}" target="_blank">{{loc.name}}</a></h4>
-        {{loc.address}}
+    <div class="row"  ng-repeat="city in all" style="margin-bottom: 25px; padding-top: 5px; padding-bottom: 5px;">
+      <div class="columns large-10 medium-10 small-10">
+        <a href="#" id="{{city.id}}_anchor"> </a>
+        <span style="font-size: 25px;">{{city | citystring}}</span>
+        <div style="margin-top: 5px; margin-bottom: 5px;">
+          <a ng-show="city.coordinator" style="font-size: 15px" href="http://twitter.com/{{city.coordinator}}">Contact @{{city.coordinator}} via Twitter to add your cowork location</a>
+        </div>
+      </div>
+      <div class="columns large-2 medium-2 hide-for-small-only">
+        <a class="button small" ng-click="viewMap(city)" style="width: 100%; margin-bottom: 10px; padding: 10px; margin-right: 5px;" href="#">view map</a>
+      </div>
+
+      <div class="columns large-12 small-12">
+        <hr style="margin-top: 0px" />
+      </div>
+
+      <div class="columns">
+        <div style="margin-bottom: 10px;" ng-repeat="loc in city.locations | orderBy:random">
+          <h4><a href="{{loc.url}}" target="_blank">{{loc.name}}</a></h4>
+          {{loc.address}}
+        </div>
       </div>
     </div>
 
-    <a href="#" id="coordinators"> </a>
-    <h2>Our Coordinators</h2>
-    <hr/>
-    <div class="columns" ng-repeat="coordinator in coordinators | orderBy:random" style="margin-bottom: 25px;">
-      <img style="border: solid 1px silver; padding: 3px; float: right; width: 75px; height: 75px; margin-left: 20px;" src="{{coordinator.profile_image_url}}" />
-      <div style="font-size: 20px">
-        <span style="font-weight: bold">
-          {{coordinator.name}} - <a href="http://twitter.com/{{coordinator.screen_name}}" target="_blank">@{{coordinator.screen_name}}</a><br/>
-        </span>
-        <br/>
-        {{coordinator.description}}<br/>
+    <div class="row">
+      <a href="#" id="coordinators"> </a>
+      <h2>Our Coordinators</h2>
+      <hr/>
+    </div>
+
+    <div class="row">
+      <div class="columns" ng-repeat="coordinator in coordinators | orderBy:random" style="margin-bottom: 25px;">
+        <img style="border: solid 1px silver; padding: 3px; float: right; width: 75px; height: 75px; margin-left: 20px;" src="{{coordinator.profile_image_url}}" />
+        <div style="font-size: 20px">
+          <span style="font-weight: bold">
+            {{coordinator.name}} - <a href="http://twitter.com/{{coordinator.screen_name}}" target="_blank">@{{coordinator.screen_name}}</a><br/>
+          </span>
+          <br/>
+          {{coordinator.description}}<br/>
+        </div>
+        <hr />
       </div>
-      <hr />
     </div>
   </div>
-
 
   <script>
     function drawMap(locations) {
@@ -145,8 +185,8 @@
     });
   </script>
 
-  <div id="mapmodal" class="reveal-modal small" data-reveal="data-reveal">
-    <div id="map" style="margin: 30px; width: 90%; height: 430px;"></div>
+  <div id="mapmodal" class="reveal-modal" data-reveal="data-reveal">
+    <div id="map" style="margin: 30px; width: 90%; height: 530px;"></div>
     <a class="close-reveal-modal">&#215;</a>
   </div>
 
