--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,7 +57,7 @@
           </div>
         </div>
         <div class="columns large-2 medium-2 hide-for-small-only">
-          <a class="button small viewmap" style="width: 100%; margin-bottom: 10px; padding: 10px; margin-right: 5px;" data-city-id="<%= city.id %>" href="#">view map</a>
+          <a class="button small viewmap" style="width: 100%; margin-bottom: 10px; padding: 10px; margin-right: 5px;" data-city-id="<%= city.id %>">view map</a>
         </div>
 
         <div class="columns large-12 small-12">
