--- a/views/viewhistory.ejs
+++ b/views/viewhistory.ejs
@@ -4,13 +4,13 @@
     <h1>History</h1>
     <hr />
     <div class="row" ng-repeat="entry in history | orderBy:enryDate" style="padding-bottom: 10px; margin-bottom: 10px; border-bottom: solid 1px silver;">
-      <img class="columns large-2" src="{{entry.audit.by.avatar}}" style="width: 50px; height: 50px; padding: 3px; border: solid 1px silver;" /> 
-      <div class="columns large-8">
+      <img class="columns large-2 small-2" src="{{entry.audit.by.avatar}}" style="width: 50px; height: 50px; padding: 3px; border: solid 1px silver;" /> 
+      <div class="columns large-8 small-8">
         {{entry.audit.by.username}}<br/>
         {{entry.audit.type}} - {{entry.audit.date || ""}}<br/>
         {{entry | detailstring}}
       </div>
-      <a href="#" ng-show="canUndo(entry)" ng-click="undo(entry)" class="button tiny columns large-2">undo delete</a>
+      <a href="#" ng-show="canUndo(entry)" ng-click="undo(entry)" class="button tiny columns large-2 small-2">undo delete</a>
     </div>
   </div>
 
