--- a/views/index.ejs
+++ b/views/index.ejs
@@ -132,7 +132,7 @@
       if(coordinators.length > 1) {
         $("#coordinatorsectiontitle").html('Our Coordinators');
       } else {
-        $("#coordinatorsectiontitle").html('Coordinator For This City');
+        $("#coordinatorsectiontitle").html('Coordinator for This City');
       }
     }
 
