--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,10 +1,4 @@
-  </div>
-  <script>
-    $(document).foundation();
-  </script>
-  <footer style="background: #F5F5F5; position: fixed; bottom: 0px; width: 100%; padding: 10px; text-align: center">
-    Website hacked together by <a href="http://amirrajan.net">Amir Rajan</a> | 
-    Source is on <a href="https://github.com/amirrajan/coworkingdotcom">GitHub</a> | Here is all the data as a <a href="/all">JSON payload</a> | Don't be evil
-  </footer>
-</body>
-</html>
+Website <a href="http://www.paulgraham.com/hp.html" target="_blank">hacked</a> together by <a href="http://amirrajan.net">Amir Rajan</a> |
+Source is on <a href="https://github.com/amirrajan/coworkingdotcom">GitHub</a> |
+Here is all the data as a <a href="/all">JSON payload</a> |
+Don't be evil
