--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,19 +2,13 @@
   <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
   <div ng-app="App" ng-controller="AppCtrl">
     <div class="row">
-      <h1>What is Coworking?</h1>
-      <hr/>
-      <p>
-        The idea is simple: independent professionals and those with workplace
-        flexibility work better together than they do alone. Coworking spaces are
-        about community-building and sustainability. Participants agree to uphold
-        the values set forth by the movement’s founders, as well as interact and share 
-        with one another. We are about creating better places to work and as a result,
-        a better way to work.
-      </p>
-
-      <p>If your cowork location isn't represented, reach out to any of our <a href="#coordinators">coordinators</a> via Twitter, and they'll get the ball rolling.</p>
+    <h1>What is Coworking?</h1>
+    <hr/>
+    <% include what_is_coworking %>
     </div>
+    <% if(u.keys(all).length > 1) { %>
+    <h3>Cities<hr/></h3>
+    <% } %>
 
     <% function cityString(city) {
         if(city.state) {
@@ -39,18 +33,14 @@
     }); %>
 
     <% if(u.keys(all).length > 1) { %>
-      <div class="row">
-        <div class="columns">
-          <hr />
-          Cities |
-          <% u.each(all, function(city) {  %>
-            <a href="<%= cityLink(city) %>">
-              <%= cityString(city) %>
-            </a> | 
-          <% }); %>
-          <hr />
+      <% u.each(all, function(city) {  %>
+        <div class="row">
+          <a href="<%= cityLink(city) %>">
+            <%= cityString(city) %>
+          </a>
+          <hr/>
         </div>
-      </div>
+      <% }); %>
       <br/>
       <br/>
     <% } else { %>
@@ -59,35 +49,37 @@
       <br/>
     <% } %>
 
-    <% u.each(all, function(city) {  %>
-      <div class="row" style="margin-bottom: 25px; padding-top: 5px; padding-bottom: 5px;">
-        <div class="columns large-10 medium-10 small-10">
-          <a href="#" id="<%= city.tinyname || city.id %>_anchor"> </a>
-          <span style="font-size: 25px;"><%= cityString(city) %></span>
-          <div style="margin-top: 5px; margin-bottom: 5px;">
-            <% if(city.coordinator) { %>
-              <a style="font-size: 15px" href="http://twitter.com/<%= city.coordinator %>">Contact @<%= city.coordinator %> via Twitter to add your cowork location</a>
-            <% } %>
-          </div>
-        </div>
-        <div class="columns large-2 medium-2 hide-for-small-only">
-          <a class="button small viewmap" style="width: 100%; margin-bottom: 10px; padding: 10px; margin-right: 5px;" data-city-id="<%= city.id %>">view map</a>
-        </div>
-
-        <div class="columns large-12 small-12">
-          <hr style="margin-top: 0px" />
-        </div>
-
-        <div class="columns">
-          <% u.each(u.sortBy(city.locations, function(loc) { return loc.order; }), function(loc) {  %>
-            <div style="margin-bottom: 10px;">
-              <h4><a href="<%= loc.url %>" target="_blank"><%= loc.name %></a></h4>
-              <%= loc.address || "" %>
+    <% if(u.keys(all).length == 1) { %>
+        <% u.each(all, function(city) {  %>
+          <div class="row" style="margin-bottom: 25px; padding-top: 5px; padding-bottom: 5px;">
+            <div class="columns large-10 medium-10 small-10">
+              <a href="#" id="<%= city.tinyname || city.id %>_anchor"> </a>
+              <span style="font-size: 25px;"><%= cityString(city) %></span>
+              <div style="margin-top: 5px; margin-bottom: 5px;">
+                <% if(city.coordinator) { %>
+                  <a style="font-size: 15px" href="http://twitter.com/<%= city.coordinator %>">Contact @<%= city.coordinator %> via Twitter to add your cowork location</a>
+                <% } %>
+              </div>
             </div>
-          <% }); %>
-        </div>
-      </div>
-    <% }); %>
+            <div class="columns large-2 medium-2 hide-for-small-only">
+              <a class="button small viewmap" style="width: 100%; margin-bottom: 10px; padding: 10px; margin-right: 5px;" data-city-id="<%= city.id %>">view map</a>
+            </div>
+
+            <div class="columns large-12 small-12">
+              <hr style="margin-top: 0px" />
+            </div>
+
+            <div class="columns">
+              <% u.each(u.sortBy(city.locations, function(loc) { return loc.order; }), function(loc) {  %>
+                <div style="margin-bottom: 10px;">
+                  <h4><a href="<%= loc.url %>" target="_blank"><%= loc.name %></a></h4>
+                  <%= loc.address || "" %>
+                </div>
+              <% }); %>
+            </div>
+          </div>
+        <% }); %>
+    <% } %>
 
     <div class="row">
       <a href="#" id="coordinators"> </a>
@@ -146,7 +138,7 @@
 
       var LatLngList = [];
 
-      for (i = 0; i < locations.length; i++) {  
+      for (i = 0; i < locations.length; i++) {
         var loc = JSON.parse(JSON.stringify(locations[i]));
         if(loc.lat && loc.lng) {
           var marker = new google.maps.Marker({
@@ -215,4 +207,12 @@
     <a class="close-reveal-modal">&#215;</a>
   </div>
 
-<% include footer %>
+  </div>
+  <script>
+    $(document).foundation();
+  </script>
+  <footer style="background: #F5F5F5; position: fixed; bottom: 0px; width: 100%; padding: 10px; text-align: center">
+    <% include footer %>
+  </footer>
+</body>
+</html>
