--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,17 @@
       });
     }); %>
 
+    <%
+       var flatCities = u.map(all, function(c) {
+         return c;
+       })
+
+       flatCities = u.sortBy(flatCities, function(v) {
+         return (v.country || "") + (v.state || "") + (v.city || "");
+       });
+
+       %>
+
     <% if(u.keys(all).length > 1) { %>
       <% u.each(all, function(city) {  %>
         <div class="row">
