--- a/views/city.ejs
+++ b/views/city.ejs
@@ -7,7 +7,6 @@
 <script>try{Typekit.load();}catch(e){}</script>
 
 
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/main.js" type="text/javascript"></script>
 <script type="text/javascript"
@@ -47,7 +46,7 @@
             <% u.each(all, function(city) {  %>
               <% u.each(u.sortBy(city.locations, function(loc) { return loc.order; }), function(loc) {  %>
 				        <li>
-                  <a href="<%= loc.url %>" target="_blank"><%= loc.name %></a>
+                  <a href="http://<%= loc.url %>" target="_blank"><%= loc.name %></a>
 				        	<img src="img/marker-white.svg"><span><%= loc.address || "" %></span>
 				        </li>
               <% }); %>
