--- a/views/city.ejs
+++ b/views/city.ejs
@@ -1,7 +1,7 @@
 <html>
 <head>
 <titleCoworking Around the Globe</title>
-<link href="css/styles.css" rel="stylesheet" type="text/css">
+<link href="/css/styles.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <script src="//use.typekit.net/uam2aqu.js"></script>
 <script src="/underscore/underscore.js"></script>
@@ -9,7 +9,7 @@
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="js/main.js" type="text/javascript"></script>
+<script src="/js/main.js" type="text/javascript"></script>
 <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCpWY1y7do3eG1RacDVOkJ91n8SURNN7c"></script>
 </head>
