added new index page

--- a/views/city.ejs
+++ b/views/city.ejs
@@ -1,6 +1,6 @@
 <html>
 <head>
-<titleCoworking Around the Globe</title>
+<title>Coworking Around the Globe</title>
 <link href="/css/styles.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <script src="//use.typekit.net/uam2aqu.js"></script>
