--- a/views/city.ejs
+++ b/views/city.ejs
@@ -22,7 +22,7 @@
 				<img src="/img/logo.png">
 			</div>
 			<div class="back">
-				<a href="#"><i class="fa fa-arrow-left"></i>Go Back</a>
+				<a href="/"><i class="fa fa-arrow-left"></i>Go Back</a>
 			</div>
 			<div class="city">
         <% if(u.keys(all).length == 1) { %>
