--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,238 +1,133 @@
-<% include header %>
-  <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
-  <div ng-app="App" ng-controller="AppCtrl">
-    <div class="row">
-    <h1>What is Coworking?</h1>
-    <hr/>
-    <% include what_is_coworking %>
-    </div>
-    <% if(u.keys(all).length > 1) { %>
-    <h3>Cities<hr/></h3>
-    <% } %>
+<html>
+<head>
+<title>Coworking Around the Globe</title>
+<link href="/css/homepage-styles.css" rel="stylesheet" type="text/css">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<script src="//use.typekit.net/uam2aqu.js"></script>
+<script>try{Typekit.load();}catch(e){}</script>
 
-    <% function cityString(city) {
-        if(city.state) {
-          return city.city + ", " + (city.state || "(none)") + ", " + city.country;
-        } else {
-          return city.city + ", " + city.country;
-        }
-    }%>
 
-    <% function cityLink(city) {
-         if(city.tinyname) {
-           return "/cities/" + city.tinyname;
-         } else {
-           return "#" + city.id + "_anchor";
-         }
-    }%>
 
-    <% u.each(all, function(city) {
-      u.each(city.locations, function(loc) {
-        loc.order = Math.random();
-      });
-    }); %>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="/js/homepage-main.js" type="text/javascript"></script>
+<script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCpWY1y7do3eG1RacDVOkJ91n8SURNN7c"></script>
+</head>
+<body>
 
-    <%
-       var flatCities = u.map(all, function(c) {
-         return c;
-       })
-
-       flatCities = u.sortBy(flatCities, function(v) {
-         return (v.country || "") + (v.state || "") + (v.city || "");
-       });
-
-       var citiesByCountry = { };
-
-       u.each(flatCities, function (v) {
-         citiesByCountry[v.country] = citiesByCountry[v.country] || [ ];
-         citiesByCountry[v.country].push(v);
-       });
-
-       console.log(citiesByCountry);
-
-       %>
-
-    <% if(u.keys(all).length > 1) { %>
-      <% u.each(all, function(city) {  %>
-        <div class="row">
-          <a href="<%= cityLink(city) %>">
-            <%= cityString(city) %>
-          </a>
-          <hr/>
-        </div>
-      <% }); %>
-      <br/>
-      <br/>
+<div class="container">
+	<div class="space">
+    <% if(user) { %>
+      <h5><a href="/managecities">Manage Cities</a></h5><br />
+      <h5><a href="/viewhistory">View Change History</a></h5><br />
+      <h5><a href="/logout">Sign Out: @<%= user.username %></a></h5><br />
     <% } else { %>
-      <hr />
-      <br/>
-      <br/>
+      <h5><a href="/twitter">Sign In</a></h5>
     <% } %>
+	</div>
+</div>
 
-    <% if(u.keys(all).length == 1) { %>
-        <% u.each(all, function(city) {  %>
-          <div class="row" style="margin-bottom: 25px; padding-top: 5px; padding-bottom: 5px;">
-            <div class="columns large-10 medium-10 small-10">
-              <a href="#" id="<%= city.tinyname || city.id %>_anchor"> </a>
-              <span style="font-size: 25px;"><%= cityString(city) %></span>
-              <div style="margin-top: 5px; margin-bottom: 5px;">
-                <% if(city.coordinator) { %>
-                  <a style="font-size: 15px" href="http://twitter.com/<%= city.coordinator %>">Contact @<%= city.coordinator %> via Twitter to add your cowork location</a>
-                <% } %>
-              </div>
-            </div>
-            <div class="columns large-2 medium-2 hide-for-small-only">
-              <a class="button small viewmap" style="width: 100%; margin-bottom: 10px; padding: 10px; margin-right: 5px;" data-city-id="<%= city.id %>">view map</a>
-            </div>
+<header>
+	<div class="home-logo">
+		<img src="img/logo.png">
+	</div>
+</header>
+<div class="container" style="display: none">
+	<div class="country">
+		<select>
+  			<option value="default">Select your country</option>
+  			<option value="United States">United States</option>
+  			<option value="Canada">Canada</option>
+  			<option value="Europe">Europe</option>
+  			<option value="Asia/Pacific/Middle East">Asia/Pacific/Middle East</option>
+  			<option value="Oceania">Oceania</option>
+  			<option value="Latin America">Latin America</option>
+  			<option value="Africa">Africa</option>
+		</select>
+		<div class="country-icon">
+			<i class="fa fa-caret-down"></i>
+		</div>
+	</div>
+</div>
 
-            <div class="columns large-12 small-12">
-              <hr style="margin-top: 0px" />
-            </div>
 
-            <div class="columns">
-              <% u.each(u.sortBy(city.locations, function(loc) { return loc.order; }), function(loc) {  %>
-                <div style="margin-bottom: 10px;">
-                  <h4><a href="<%= loc.url %>" target="_blank"><%= loc.name %></a></h4>
-                  <%= loc.address || "" %>
-                </div>
-              <% }); %>
-            </div>
-          </div>
-        <% }); %>
-    <% } %>
+<!-- Map Section! -->
 
-    <div class="row">
-      <a href="#" id="coordinators"> </a>
-      <h2 id="coordinatorsectiontitle">Our Coordinators</h2>
-      <hr/>
-    </div>
+<section id="homeMap" style="display: none">
+		<section id="cd-google-map">
+		<!-- #google-container will contain the map  -->
+		<div id="google-container"></div>
+		<!-- #cd-zoom-in and #zoom-out will be used to create our custom buttons for zooming-in/out -->
+		<div id="cd-zoom-in"></div>
+		<div id="cd-zoom-out"></div>
+		</div>
+</section>
+</section>
 
-    <div class="row">
-      <div class="columns" ng-repeat="coordinator in coordinators | orderBy:random" style="margin-bottom: 25px;">
-        <img style="border: solid 1px silver; padding: 3px; float: right; width: 75px; height: 75px; margin-left: 20px;" src="{{coordinator.profile_image_url}}" />
-        <div style="font-size: 20px">
-          <span style="font-weight: bold">
-            {{coordinator.name}} - <a href="http://twitter.com/{{coordinator.screen_name}}" target="_blank">@{{coordinator.screen_name}}</a><br/>
-          </span>
-          <br/>
-          {{coordinator.description}}<br/>
-        </div>
-        <hr />
-      </div>
-    </div>
-  </div>
-
-  <script>
-    var all = <%- JSON.stringify(all) %>;
-
-    $(function() {
-      $(".viewmap").click(function() {
-        viewMap($(this).attr("data-city-id"));
-      });
-    });
-
-    function viewMap(id) {
-      var city = all[id];
-      $("#map").html('');
-      $('#mapmodal').foundation('reveal', 'open');
-      setTimeout(function() {
-        drawMap(city.locations);
-      }, 2000);
-    };
-
-    function setCoordinatorTitle(coordinators) {
-      if(coordinators.length > 1) {
-        $("#coordinatorsectiontitle").html('Our Coordinators');
-      } else {
-        $("#coordinatorsectiontitle").html('Coordinator for This City');
-      }
+<% function cityString(city) {
+    if(city.state) {
+      return city.city + ", " + (city.state || "(none)");
+    } else {
+      return city.city;
     }
+}%>
 
-    function drawMap(locations) {
-      var map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 10,
-        mapTypeId: google.maps.MapTypeId.ROADMAP
-      });
+<% function cityLink(city) {
+     if(city.tinyname) {
+       return "/cities/" + city.tinyname;
+     } else {
+       return "#" + city.id + "_anchor";
+     }
+}%>
 
-      var infowindow = new google.maps.InfoWindow();
+<% u.each(all, function(city) {
+  u.each(city.locations, function(loc) {
+    loc.order = Math.random();
+  });
+}); %>
 
-      var LatLngList = [];
+<%
+   var flatCities = u.map(all, function(c) {
+     return c;
+   })
 
-      for (i = 0; i < locations.length; i++) {
-        var loc = JSON.parse(JSON.stringify(locations[i]));
-        if(loc.lat && loc.lng) {
-          var marker = new google.maps.Marker({
-            position: new google.maps.LatLng(loc.lat, loc.lng),
-            map: map
-          });
+   flatCities = u.sortBy(flatCities, function(v) {
+     return (v.country || "") + (v.state || "") + (v.city || "");
+   });
 
-          LatLngList.push(marker.position);
+   var citiesByCountry = { };
 
-          google.maps.event.addListener(marker, 'click', (function(marker, i) {
-            return function() {
-              var loc = locations[i];
-              infowindow.setContent(loc.name + "<br/><a target='_blank' href='https://www.google.com/maps/place/" + loc.address + "'>" + loc.address + "</a>");
-              infowindow.open(map, marker);
-            }
-          })(marker, i));
-        }
-      }
+   u.each(flatCities, function (v) {
+     citiesByCountry[v.country] = citiesByCountry[v.country] || [ ];
+     citiesByCountry[v.country].push(v);
+   });
 
-      var bounds = new google.maps.LatLngBounds ();
+   console.log(citiesByCountry);
+%>
 
-      for (var i = 0, LtLgLen = LatLngList.length; i < LtLgLen; i++) {
-        bounds.extend (LatLngList[i]);
-      }
-
-      map.fitBounds(bounds);
-    }
-
-    var app = angular.module('App', []);
-
-    app.controller("AppCtrl", function($scope, $http) {
-        $scope.random = function(entity){
-          return entity.order;
-        };
-
-        var getCoordinators = function() {
-          $http.get("/coordinators").success(function(data) {
-            _.each(data.users, function(u) {
-              u.order = Math.random();
-            });
-
-            var coordinatorsOfCities = { };
-            _.each(all, function(a) {
-              coordinatorsOfCities[(a.coordinator || "").toLowerCase()] = a;
-            });
-
-            var filteredCoordinators = [];
-            _.each(data.users, function(u) {
-              if(coordinatorsOfCities[u.screen_name.toLowerCase()]) {
-                filteredCoordinators.push(u);
-              }
-            });
-
-            setCoordinatorTitle(filteredCoordinators);
-
-            $scope.coordinators = filteredCoordinators;
-          });
-        };
-
-        getCoordinators();
-    });
-  </script>
-
-  <div id="mapmodal" class="reveal-modal" data-reveal="data-reveal">
-    <div id="map" style="margin: 30px; width: 90%; height: 530px;"></div>
-    <a class="close-reveal-modal">&#215;</a>
+<% u.each(u.keys(citiesByCountry), function(key) { %>
+  <div class="container">
+  	<div class="us">
+  		<h3><%= key %></h3>
+  	</div>
   </div>
 
+  <div class="container">
+  	<div class="gradient-line"></div>
   </div>
-  <script>
-    $(document).foundation();
-  </script>
-  <footer style="background: #F5F5F5; position: fixed; bottom: 0px; width: 100%; padding: 10px; text-align: center">
-    <% include footer %>
-  </footer>
+
+  <div class="container">
+    <div class="state">
+      <h4></h4>
+      <ul>
+      <% u.each(citiesByCountry[key], function(city) { %>
+        <li><a href="<%= cityLink(city) %>"><%= cityString(city) %></a></li>
+      <% }); %>
+      </ul>
+     <div class="little-line"></div>
+    </div>
+  </div>
+<% }); %>
 </body>
 </html>
