--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,8 +102,6 @@
      citiesByCountry[v.country] = citiesByCountry[v.country] || [ ];
      citiesByCountry[v.country].push(v);
    });
-
-   console.log(citiesByCountry);
 %>
 
 <% u.each(u.keys(citiesByCountry), function(key) { %>
@@ -118,7 +116,7 @@
   </div>
 
   <div class="container">
-    <div class="state">
+    <div class="state" style="margin-bottom: 10px">
       <h4></h4>
       <ul>
       <% u.each(citiesByCountry[key], function(city) { %>
