--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,14 +7,18 @@
 <script src="//use.typekit.net/uam2aqu.js"></script>
 <script>try{Typekit.load();}catch(e){}</script>
 
-
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="/js/homepage-main.js" type="text/javascript"></script>
 <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCpWY1y7do3eG1RacDVOkJ91n8SURNN7c"></script>
 </head>
 <body>
+
+<header>
+	<div class="home-logo">
+		<img src="img/logo.png">
+	</div>
+</header>
 
 <div class="container">
 	<div class="space">
@@ -28,11 +32,6 @@
 	</div>
 </div>
 
-<header>
-	<div class="home-logo">
-		<img src="img/logo.png">
-	</div>
-</header>
 <div class="container" style="display: none">
 	<div class="country">
 		<select>
@@ -127,5 +126,21 @@
     </div>
   </div>
 <% }); %>
+
+<div class="container" style="color: white; margin-top: 10px;">
+  <p>
+    Have a coworking space to add? Reach out to <a href="http://twitter.com/<%= masterAccount %>" style="text-decoration: underline">@<%= masterAccount %> on Twitter</a> (just send a mention and we'll get back to you).
+  </p>
+
+  <p>
+    The idea is simple: independent professionals and those with workplace
+    flexibility work better together than they do alone. Coworking spaces are
+    about community-building and sustainability. Participants agree to uphold
+    the values set forth by the movement’s founders, as well as interact and share
+    with one another. We are about creating better places to work and as a result,
+    a better way to work.
+  </p>
+</div>
+
 </body>
 </html>
