--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,6 +10,9 @@ html body {
   height: 100vh;
   overflow: hidden;
 }
+html body .top-side img {
+  width: 50%;
+}
 html body p,
 html body a,
 html body h1,
@@ -24,6 +27,47 @@ html body input {
   font-style: normal;
   font-weight: 400;
 }
+html body #cd-zoom-in {
+  height: 32px;
+  width: 32px;
+  cursor: pointer;
+  margin-left: 10px;
+  background-color: #2a3a4d;
+  line-height: 32px;
+  text-align: center;
+  margin-top: 15px;
+}
+html body #cd-zoom-in i {
+  color: #fff;
+  opacity: .75;
+  font-size: 20px;
+  transition: all 0.2s ease-in-out;
+  line-height: 32px;
+}
+html body #cd-zoom-in i:hover {
+  opacity: 1;
+  color: #32e4c5;
+}
+html body #cd-zoom-out {
+  height: 32px;
+  width: 32px;
+  cursor: pointer;
+  margin-left: 10px;
+  background-color: #2a3a4d;
+  line-height: 32px;
+  text-align: center;
+}
+html body #cd-zoom-out i {
+  color: #fff;
+  opacity: .75;
+  line-height: 32px;
+  font-size: 20px;
+  transition: all 0.2s ease-in-out;
+}
+html body #cd-zoom-out i:hover {
+  opacity: 1;
+  color: #32e4c5;
+}
 html a {
   color: #fff;
   text-decoration: none;
@@ -35,7 +79,7 @@ html aside {
   background: #2a3a4d;
   height: 100vh;
   width: 480px;
-  overflow: hidden;
+  overflow: scroll;
   float: left;
 }
 html aside .side-padding {
@@ -54,11 +98,11 @@ html aside .city h1 {
   font-weight: 400;
   text-transform: uppercase;
   color: #fff;
-  font-size: 4em;
+  font-size: 3em;
   margin-top: 0px;
   line-height: 100%;
   letter-spacing: .1em;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
 html aside .search {
   height: 50px;
@@ -125,9 +169,6 @@ html aside ul li img {
   height: 28px;
   margin-right: 12px;
   float: left;
-}
-html aside .city-side {
-  overflow: scroll !important;
 }
 html #main {
   width: 100%;
